syntax = "proto2";

message ImgInputOutputProto {
	message FormatProto {
		optional int32 track = 1;
		optional int32 side = 2;

		optional int32 sector_size = 3 [default=512];
		optional int32 sectors = 4;
	}

	repeated FormatProto format = 4;
	optional int32 tracks = 5 [default=80];
	optional int32 sides = 6 [default=2];
}

message DiskCopyInputProto {}
message ImdInputProto {}
message Jv3InputProto {}

message InputFileProto {
	optional string filename = 1;
	oneof format {
		ImgInputOutputProto img = 2;
		DiskCopyInputProto diskcopy = 3;
		ImdInputProto imd = 4;
		Jv3InputProto jv3 = 5;
	}
}

